<resources>
    <string name="app_name">鸿狐商城</string>
    <string name="error_exit_app">程序异常,即将退出……</string>
    <string name="to_loading">正在加载中……</string>
    <string name="header_hint_normal">下拉刷新</string>
    <string name="header_hint_normal_ing">正在刷新……</string>
    <string name="header_hint_normal_over">刷新完成</string>
    <string name="header_hint_ready">松开刷新</string>
    <string name="header_last_time">上次更新时间:</string>
    <string name="past_time">刚刚</string>
    <string name="foot_hinit_normal">上拉加载更多</string>
    <string name="foot_hinit_normal_ing">正在加载……</string>
    <string name="foot_hinit_normal_over">加载完成</string>
    <string name="foot_hinit_normal_no_data">没有更多数据!</string>
    <string name="foot_hinit_normal_ready">松开加载更多</string>
    <string name="on_open">打开</string>
    <string name="on_close">关闭</string>
    <string name="on_ok">确定</string>
    <string name="on_exit">退出</string>
    <string name="on_cancel">取消</string>
    <string name="on_prompt">提示</string>
    <string name="on_content">内容</string>
    <string name="header_hint_loading">正在加载中……</string>
    <string name="pwd_input">请输入六位密码</string>
    <string name="default_time_type">yyyy-MM-dd-HH-mm-ss</string>
    <string name="network_error">网络不可用!</string>
    <string name="settings_network">去设置网络</string>
    <string name="refresh_window">  点击空白处刷新页面</string>

    <string name="restart_btn">请重试</string>
    <string name="refresh_btn">刷新</string>


    <string name="str_home">首页</string>
    <string name="str_classification">分类</string>
    <string name="str_shopping_cart">购物车</string>
    <string name="str_user">我的</string>

    <string name="str_search_goods">输入您要搜索的商品</string>
    <string name="str_input_goods_name">请输入商品名称</string>
    <string name="str_searth">搜索</string>
    <string name="str_notice">公告</string>
    <string name="str_logistics_query">物流查询</string>
    <string name="str_user_order">我的订单</string>
    <string name="str_user_collect">我的收藏</string>
    <string name="str_shoping_card_empty">购物车空空如也</string>
    <string name="str_guangguang">去逛逛</string>
    <string name="str_user_centre">个人中心</string>
    <string name="str_await_money">待付款</string>
    <string name="str_await_out_goods">待发货</string>
    <string name="str_await_in_goods">待收货</string>
    <string name="str_await_evaluate">待评价</string>
    <string name="str_order_over">已完成</string>
    <string name="str_user_all_order">全部订单</string>
    <string name="str_user_integral">我的积分</string>
    <string name="str_user_wallet">我的钱包</string>
    <string name="str_user_coupons">我的优惠券</string>
    <string name="str_after_sales_service">售后服务</string>
    <string name="str_shipping_address">收货地址</string>
    <string name="str_user_collection">我的收藏</string>
    <string name="str_settings">设置</string>
    <string name="str_recharge">充值</string>
    <string name="str_withdrawal">提现</string>
    <string name="str_settings_pwd">设置密码</string>
    <string name="str_found">发现</string>
    <string name="str_refund">退款</string>
    <string name="str_sales_return">退货</string>
    <string name="str_exchange">换货</string>
    <string name="str_shipping_address_management">收货地址管理</string>
    <string name="str_compile">编辑</string>
    <string name="str_delete">删除</string>
    <string name="str_settings_default">设为默认</string>
    <string name="str_new_addr">新建地址</string>
    <string name="str_feedback">意见反馈</string>
    <string name="str_about_us">关于我们</string>
    <string name="str_service_tel">客服电话</string>
    <string name="str_version_information">版本信息</string>
    <string name="str_clear_cache">清除缓存</string>
    <string name="str_log_out">退出登录</string>
    <string name="str_let">手机号</string>
    <string name="str_update_pwd">修改密码</string>
    <string name="str_send_verification_code">发送验证码</string>
    <string name="str_insert_verification_code">输入验证码</string>
    <string name="str_login">登录</string>
    <string name="str_login_ing">正在登录中……</string>
    <string name="str_login_error">请重新登录</string>
    <string name="str_registered">注册</string>
    <string name="str_enter_tel">请输入手机号</string>
    <string name="str_enter_pwd">请输入密码</string>
    <string name="str_enter_code">请输入验证码</string>
    <string name="str_confirm_pwd">请再次确认密码</string>
    <string name="str_forgot_pwd">忘记密码？</string>
    <string name="str_agreed_user_agreement">同意用户协议</string>
    <string name="str_user_agreement">用户协议</string>
    <string name="str_umeng_login">选择第三方登录平台</string>
    <string name="str_umeng_login_qq">QQ登录</string>
    <string name="str_umeng_login_weixin">微信登陆</string>
    <string name="str_umeng_login_weibo">微博登陆</string>


    <string name="str_notice_list">公告列表</string>
    <string name="str_newest">最新</string>
    <string name="str_sales">销量</string>
    <string name="str_price">价格</string>
    <string name="str_screening">筛选</string>
    <string name="str_all">全部</string>
    <string name="str_goods_details">商品详情</string>
    <string name="str_no_goods_evaluate_ccontent">暂无商品评价内容</string>
    <string name="str_buy">已购买</string>
    <string name="str_acquisition">可获得</string>
    <string name="str_integral">积分</string>
    <string name="str_synthesize_score">综合评分:</string>
    <string name="str_select_more_comment">查看更多评论</string>
    <string name="str_collection">收藏</string>
    <string name="str_add_card">加入购物车</string>
    <string name="str_immediately_buy">立即购买</string>
    <string name="str_inventory">库存</string>
    <string name="str_standard">规格</string>
    <string name="str_update_number">修改数量</string>
    <string name="str_confirm_order">确认订单</string>
    <string name="str_choose_coupons">选择优惠券</string>
    <string name="str_available_number">张可用</string>
    <string name="str_max_deduction">最多抵扣</string>
    <string name="str_to_use">抵用</string>
    <string name="str_preferential">优惠</string>
    <string name="str_leave_massage">留言</string>
    <string name="str_combined">合计</string>
    <string name="str_settlement">去结算</string>
    <string name="str_choose_pay_type">请选择支付方式</string>
    <string name="str_determine_cod">确定货到付款？</string>
    <string name="str_order_content">订单详情</string>
    <string name="str_order_number">订单号：</string>
    <string name="str_pay_type">付款方式</string>
    <string name="str_order_time">下单时间</string>
    <string name="str_integral_deduction">积分抵扣</string>
    <string name="str_coupons">优惠券</string>
    <string name="str_total_money">总金额</string>
    <string name="str_should_pay">应支付</string>
    <string name="str_cancel_order">取消订单</string>
    <string name="str_prompt">提示</string>
    <string name="str_are_you_sure_you_cancel_the_order">您确定取消订单吗？</string>
    <string name="str_opinion_content">意见内容</string>
    <string name="str_commit_opinion">提交意见</string>

    <string name="str_success_pay">支付成功！</string>
    <string name="str_cancel_pay">取消支付！</string>
    <string name="str_unknown_error">未知错误！</string>
    <string name="str_weixin_pay_result">微信支付结果：</string>
    <string name="str_start_app_content">立即体验</string>
    <string name="str_searth_content">请输入关键字搜索</string>
    <string name="str_goods">商品</string>
    <string name="str_shops">店铺</string>
    <string name="str_phone">手机号</string>
    <string name="str_update_user_icon">更换用户头像</string>
    <string name="str_img_crop">图片剪裁</string>
    <string name="str_tab_newest">最新</string>
    <string name="str_tab_sales_volume">销量</string>
    <string name="str_tab_price">价格</string>
    <string name="str_tab_comment">评论</string>
    <string name="str_square">发现</string>

    <string-array name="select_icon_type">
        <item>相册</item>
        <item>拍照</item>
    </string-array>


</resources>
