<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.alsfox.mall.view.activity.user.UserLoginActivity">

    <include layout="@layout/default_titleview" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_and_margin_x">

        <EditText
            android:id="@+id/user_login_name_edit"
            style="@style/user_center_username_exit_style"
            android:drawableLeft="@drawable/ic_user_login_username"
            android:hint="@string/str_enter_tel" />

        <com.alsfox.mall.view.customview.user.UserPwdInputBox
            android:id="@+id/user_login_pwd_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_and_margin_x"
            app:drawableLeft="@drawable/ic_user_login_pwd"
            app:drawablePadding="@dimen/padding_and_margin" />

        <Button
            android:id="@+id/user_do_login_btn"
            style="@style/btn_user_center_login"
            android:text="@string/str_login" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/user_to_register_text"
                style="@style/tv_general_clickable"
                android:text="@string/str_registered" />

            <TextView
                android:id="@+id/user_to_respwd_text"
                style="@style/tv_general_clickable"
                android:layout_alignParentRight="true"
                android:text="@string/str_forgot_pwd" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/oauth_login_ly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/str_umeng_login" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/tiv_user_oauth_qq"
                    style="@style/user_login_oauth_style"
                    android:src="@drawable/ic_oauth_qq" />

                <ImageView
                    android:id="@+id/tiv_user_oauth_weixin"
                    style="@style/user_login_oauth_style"
                    android:src="@drawable/ic_oauth_weixin" />

                <ImageView
                    android:id="@+id/tiv_user_oauth_weibo"
                    style="@style/user_login_oauth_style"
                    android:src="@drawable/ic_oauth_weibo"
                    android:visibility="gone" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>