<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/default_titleview" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_and_margin_x">

        <EditText
            android:id="@+id/user_register_name_edit"
            style="@style/user_center_username_exit_style"
            android:drawableLeft="@drawable/ic_user_login_username"
            android:hint="@string/str_enter_tel" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_and_margin_x"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/user_register_code_edit"
                style="@style/et_user_center_general_tel"
                android:layout_width="0dp"
                android:layout_weight="0.65"
                android:hint="@string/str_insert_verification_code" />

            <Button
                android:id="@+id/user_register_code_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/padding_and_margin"
                android:layout_weight="0.35"
                android:background="@drawable/bg_btn_user_center_login"
                android:text="@string/str_send_verification_code"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_xxx" />
        </LinearLayout>

        <com.alsfox.mall.view.customview.user.UserPwdInputBox
            android:id="@+id/user_register_pwd_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_and_margin_x"
            app:drawableLeft="@drawable/ic_user_login_pwd"
            app:drawablePadding="@dimen/padding_and_margin" />

        <com.alsfox.mall.view.customview.user.UserPwdInputBox
            android:id="@+id/user_register_pwd_tow_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_and_margin_x"
            app:drawableLeft="@drawable/ic_user_login_pwd"
            app:drawablePadding="@dimen/padding_and_margin" />


        <Button
            android:id="@+id/user_do_register_btn"
            style="@style/btn_user_center_login"
            android:text="@string/str_registered" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_and_margin_x"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/user_register_protocol_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/selector_cb_agree_user_protocol"
                android:checked="true" />

            <TextView
                android:id="@+id/user_register_protocol_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_agreed_user_agreement"
                android:textColor="@color/mall_text_color"
                android:textSize="@dimen/text_size_xx" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>