<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/default_titleview" />

    <ImageView
        android:id="@+id/user_info_icon_img"
        android:layout_width="@dimen/height_width_tow_xx"
        android:layout_height="@dimen/height_width_tow_xx"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/padding_and_margin_xxx" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_default_ly_fine"
        android:padding="@dimen/padding_and_margin_xx">

        <TextView
            style="@style/text_order_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/str_phone" />

        <TextView
            android:id="@+id/user_info_phone_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:enabled="false"
            android:text=""
            android:textColor="@color/mall_gray"
            android:textSize="@dimen/text_size_xx" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/user_info_update_icon_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_default_ly_fine"
        android:padding="@dimen/padding_and_margin_xx">

        <TextView
            style="@style/text_order_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/str_update_user_icon" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_more" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/user_info_update_pwd_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_default_ly_fine"
        android:padding="@dimen/padding_and_margin_xx">

        <TextView
            style="@style/text_order_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/str_update_pwd" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_more" />

    </RelativeLayout>
</LinearLayout>